removed docker support

--- a/user-details-service/user-details-service/user-details-service.csproj
+++ b/user-details-service/user-details-service/user-details-service.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>user_details_service</RootNamespace>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>d2c650d9-d942-4e8c-8586-38f1843d0e02</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
