--- a/user-details-service/user-details-service/appsettings.json
+++ b/user-details-service/user-details-service/appsettings.json
@@ -1,10 +1,18 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Database=user-details-service-db;Username=postgres;Password=P@ssw0rd"
+    },
+    "JWT": {
+        "ValidIssuer": "creditSwisseAuth",
+        "ValidAudience": "creditSwisseAuth",
+        "Secret": "!creditSwisseAuth!"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
 
