--- a/user-details-service/user-details-service/user-details-service.csproj
+++ b/user-details-service/user-details-service/user-details-service.csproj
@@ -14,6 +14,7 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="9.1.1436" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
@@ -40,7 +41,6 @@
     <None Remove="MappingProfiles\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Entities\" />
     <Folder Include="Extensions\" />
     <Folder Include="MappingProfiles\" />
   </ItemGroup>
