fixed docker-compose. api image is communicating with postgres image.

--- a/user-details-service/user-details-service/appsettings.json
+++ b/user-details-service/user-details-service/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=user-details-service-db;Username=postgres;Password=P@ssw0rd"
+        "DefaultConnection": "Host=localhost;port=5432;Database=user-details-db;Username=postgres;Password=P@ssw0rd"
     },
     "JWT": {
         "ValidIssuer": "creditSwisseAuth",
