--- a/user-details-service/user-details-service/docker-compose.yml
+++ b/user-details-service/user-details-service/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   user-details-service:
     image: ${DOCKER_REGISTRY-}userdetailsservice
     depends_on:
-      - "user-details-service-db"
+      - "postgres-image"
     container_name: user-details-service
     ports:
       - "8088:80"
@@ -16,18 +16,20 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - ConnectionStrings__DefaultConnection=User ID=postgres;Password=P@ssw0rd;Server=user-details-service-db;Port=5432;Database=user-details-service-db; IntegratedSecurity=true;Pooling=true
-      - ASPNETCORE_URLS=http://+:80
+      - DB_CONNECTION_STRING:host=postgres-image;Port=5432;User ID=postgres;Password=P@ssw0rd;Database=user-details-db;
+      - ASPNETCORE_URLS:http://+:80
     networks:
       - dev
 
-  user-details-service-db:
+  postgres-image:
     image: postgres:latest
-    container_name: user-details-service-db
+    ports:
+      - "5432:5432"
+    container_name: postgres-image
     environment:
-      - POSTGRES_USER = postgres
-      - POSTGRES_PASSWORD = P@ssw0rd
-      - POSTGRES_DB = user-details-service-db
+      POSTGRES_USER : postgres
+      POSTGRES_PASSWORD : P@ssw0rd
+      POSTGRES_DB : user-details-db
     restart: always
     volumes:
       - app_data:/Users/hilalyazbek/Software-Development/Github/repos/credit-suisse/data
