--- a/application-infrastructure/application-infrastructure.csproj
+++ b/application-infrastructure/application-infrastructure.csproj
@@ -13,6 +13,8 @@
     <None Remove="Repositories\" />
     <None Remove="Migrations\" />
     <None Remove="PagingAndSorting\" />
+    <None Remove="Extensions\" />
+    <None Remove="Logging\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -20,6 +22,8 @@
     <Folder Include="Repositories\" />
     <Folder Include="Migrations\" />
     <Folder Include="PagingAndSorting\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Logging\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -27,5 +31,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.25" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.2.2" />
   </ItemGroup>
 </Project>
