implemented search movie and search series rest api

--- a/movie-service/movie-service.csproj
+++ b/movie-service/movie-service.csproj
@@ -13,11 +13,19 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="TMDbLib" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\application-infrastructure\application-infrastructure.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="HttpClients\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HttpClients\" />
   </ItemGroup>
 </Project>
