--- a/movie-service/appsettings.json
+++ b/movie-service/appsettings.json
@@ -7,6 +7,9 @@
         "ValidAudience": "creditSwisseAuth",
         "Secret": "!creditSwisseAuth!"
     },
+    "TMDB": {
+        "API_KEY": "b4deb664afe3d5005f9f04f34dbb32fa"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
