--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/
+*[Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/movie-service/bin/Debug/net7.0/movie-service.pdb
+/movie-service/bin/Debug/net7.0/movie-service.dll
+/movie-service/bin/Debug/net7.0/appsettings.json
