--- a/application-infrastructure/application-infrastructure.csproj
+++ b/application-infrastructure/application-infrastructure.csproj
@@ -15,6 +15,8 @@
     <None Remove="PagingAndSorting\" />
     <None Remove="Extensions\" />
     <None Remove="Logging\" />
+    <None Remove="Repositories\Interfaces\" />
+    <None Remove="Repositories\Implementations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -24,6 +26,8 @@
     <Folder Include="PagingAndSorting\" />
     <Folder Include="Extensions\" />
     <Folder Include="Logging\" />
+    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Repositories\Implementations\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
