add program to watch later

--- a/movie-service/movie-service.csproj
+++ b/movie-service/movie-service.csproj
@@ -30,4 +30,10 @@
   <ItemGroup>
     <Folder Include="HttpClients\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="nlog.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="nlog.config" />
+  </ItemGroup>
 </Project>
