--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,11 +2,16 @@
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
+
+COPY /user-details-service/user-details-service/*.csproj ./
+RUN dotnet restore ./
 
 COPY . ./
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS final
 WORKDIR /app
-COPY --from=build-env /app/movie-service/out .
-ENTRYPOINT ["dotnet", "movie-service.dll"]
+COPY --from=build-env /app/out .
+ENTRYPOINT ["dotnet", "user-details-service.dll"]
