--- a/src/user-details-service/user-details-service.csproj
+++ b/src/user-details-service/user-details-service.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.0" />
+    <PackageReference Include="WatchDog.NET" Version="1.4.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,12 +35,6 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="MappingProfiles\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Remove="nlog.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="nlog.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\application-infrastructure\application-infrastructure.csproj">
