--- a/src/movie-service/appsettings.json
+++ b/src/movie-service/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Database=user-details-db; Data Source=dbcreditsuisse.postgres.database.azure.com; User Id=postgres@dbcreditsuisse; Password=P@ssw0rd"
+        "DefaultConnection": "Host=PostgresDb;port=5432;Database=user-details-db;Username=postgres;Password=P@ssw0rd;IncludeErrorDetails=true"
     },
     "JWT": {
         "ValidIssuer": "creditSwisseAuth",
