Revert "moving things around"
This reverts commit 2e930a3f5cfbeb3aee50ad8909aa5eeb8066a19f.

--- a/movie-service/movie-service.csproj
+++ b/movie-service/movie-service.csproj
@@ -28,6 +28,9 @@
     <None Remove="HttpClients\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="HttpClients\" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Remove="nlog.config" />
   </ItemGroup>
   <ItemGroup>
