--- a/user-details-service/user-details-service/Dockerfile
+++ b/user-details-service/user-details-service/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-COPY /user-details-service/user-details-service/*.csproj ./
+COPY *.csproj ./
 RUN dotnet restore
 
 COPY . ./
